Add loading components and media assets
Introduced loading components for leaderboard, quests, and shop pages. Improved error handling and type safety in Stripe webhook route. Updated quiz and exit modal text for proper apostrophe usage. Added new SVG and MP3 assets for boy, girl, and zombie characters. Added a production database script and updated package.json scripts.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start",
     "lint": "eslint",
     "db:studio": "npx drizzle-kit studio",
-    "db:push": "npx drizzle-kit push:pg",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:push": "npx drizzle-kit push",
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:prod": "tsx ./scripts/prod.ts"
+
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.9",
